# coq-iteration

./: .gitignore  Makefile  TODO.md  _CoqProject  coq-iteration.opam  dune-project
theories/: dune  iteration.v
